--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     -->
 
     <h1>Hello World</h1>
+
+    <h1> Hello World. We are software developers</h1>
     <script  src="js/index.js"></script>
   </body>
 </html>
